# rero-invenio-thumbnails

./: .gitignore  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: continuous-integration-test.yml  pypi-publish.yml
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
rero_invenio_thumbnails/: __init__.py  api.py  config.py  ext.py  views.py
rero_invenio_thumbnails/modules/: __init__.py  api.py  utils.py
rero_invenio_thumbnails/modules/amazon/: __init__.py  api.py
rero_invenio_thumbnails/modules/bnf/: __init__.py  api.py
rero_invenio_thumbnails/modules/dnb/: __init__.py  api.py
rero_invenio_thumbnails/modules/files/: __init__.py  api.py
rero_invenio_thumbnails/modules/google_api/: __init__.py  api.py
rero_invenio_thumbnails/modules/google_books/: __init__.py  api.py
rero_invenio_thumbnails/modules/open_library/: __init__.py  api.py
scripts/: tests.sh
tests/: __init__.py  conftest.py  test_amazon_provider.py  test_bnf_provider.py  test_dnb_provider.py  test_files_provider.py  test_google_api_provider.py  test_google_books_provider.py  test_open_library_provider.py  test_rero_invenio_thumbnails.py  test_utils.py
